--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,4 +7,4 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
-@import "node_modules/@coreui/coreui/scss/coreui";
+//@import "node_modules/@coreui/coreui/scss/coreui";
